[gd_scene load_steps=4 format=3 uid="uid://bafol1aia1ngt"]

[ext_resource type="Script" uid="uid://3ptonqwtx0dr" path="res://scenes/ui/combat/combatant_info_panel/resource_bar.gd" id="1_08ulu"]
[ext_resource type="Texture2D" uid="uid://t0oivlblyw7u" path="res://assets/asperite/ui/resource_bar/Background.png" id="1_bdkjb"]
[ext_resource type="Texture2D" uid="uid://kqrb74mi06oc" path="res://assets/asperite/ui/resource_bar/Border.png" id="2_08ulu"]

[node name="ResourceBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_08ulu")

[node name="GhostTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResourceProgressBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -20.0
offset_right = 158.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.25
texture_under = ExtResource("1_bdkjb")
texture_over = ExtResource("2_08ulu")

[node name="GhostProgressBar" type="TextureProgressBar" parent="ResourceProgressBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -20.0
offset_right = 158.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.35
texture_under = ExtResource("1_bdkjb")
texture_over = ExtResource("2_08ulu")
tint_under = Color(1, 1, 1, 0)
tint_over = Color(1, 1, 1, 0)
tint_progress = Color(1, 1, 1, 0.60784316)

[node name="ResourceBarLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -9.0
offset_right = 92.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 22
text = "Health: 125 / 150 (0.5 / s)"
horizontal_alignment = 1
vertical_alignment = 1
